--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <script src="/js/common.js"></script>
     <script src="/js/notifier.js"></script>
     <link data-trunk rel="copy-dir" href="/static/js" />
+    <link data-trunk rel="copy-dir" href="/static/images" />
     <link data-trunk rel="tailwind-css" href="/styles/styles.scss" />
 </head>
 
