--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
     <link data-trunk rel="copy-dir" href="/static/images" />
     <link rel="stylesheet" href="https://fallout-ui-styles.s3.eu-north-1.amazonaws.com/fallout-ui-styles.css" />
     <link data-trunk rel="tailwind-css" href="/styles/styles.scss" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
 </head>
 
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+
+    <!-- and it's easy to individually load additional languages -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/rust.min.js"></script>
+
     <noscript>Error: Scripts have to be enabled to run this website</noscript>
     <div id="root">
         <p>Loading...</p>
